--- a/Willow.css
+++ b/Willow.css
@@ -5,21 +5,12 @@
 }
 header{
     background-color: lavender;
-    /* background: url(DesktopBackground/00001.jpg); */
-    height: 100vh;
+    height: 280px;
     position: relative;
-    margin-bottom: 100px;
 }
-/* header img{
-    max-height: 100%;
-    min-height: 100%;
-    width: 100%;
-    position: absolute;
-    z-index: -2;
-    filter: blur(3px);
-} */
+/***Center Hero-Text*****/
 header .hero-text{
-    font-size: 30px;
+    font-size: 18px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -27,27 +18,78 @@ header .hero-text{
     font-weight: bold;
     color: #000;
 }
+/****Top logo only on small screen*****/
+header #logo{
+    display: inline-block;
+    position: absolute;
+    left: 50%;
+    top: 21px;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 2px solid #000;
+    text-align: center;
+    line-height: 30px;
+    font-weight: bolder;
+    font-size: 10px;
+}
+/******Nav only with hamburger menu displayed for small screen****/
 nav{
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 }
-nav a{
-    display: block;
+/********Styling the nav links and hamburger*********/
+nav a,nav label{
     text-decoration: none;
     color: #000;
     padding: 20px;
     text-transform: uppercase;
     font-weight: bold;
 }
+/**********Setting hamburger with relative position to display menu on click/check***************/
+nav label{
+    font-size: 24px;
+    position: relative;
+}
+/***Styling container for the nav links and position absolute to the hamburger menu*****/
+nav .links{
+    display: flex;
+    flex-direction: column;
+    background-color: lavenderblush;
+    position: absolute;
+    top: 52px;
+    border-radius: 6px 0 0 6px;
+}
+nav .links a{
+    display: block;
+    text-align: center;
+}
+nav .links a:hover{
+    text-decoration: underline;
+    color: plum;
+}
+/******Hiding the container for nav links and the checkbox which controls the hamburger menu****/
+nav input#menu, nav .links{
+    display: none;
+}
+/******Toggling display for the container for links when checkbox is clicked******/
+nav #menu:checked ~ div.links{
+    display: flex;
+}
+/******Hiding the logo that's part of the nav links when the container for the nav-link is visible***/
+nav #menu:checked ~ div.links a:nth-child(4){
+    display: none;
+}
 .s1,.s4{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    margin-top: 50px;
 }
 div.img{
-    width: 50%;
-    margin: 0px 80px 0 0;
+    width: 72%;
 }
 div.img img{
     max-width: 100%;
@@ -56,37 +98,44 @@ div.img img{
 }
 .shadow-empty{
     position: absolute;
-    width: 450px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
     background-color: rgba(230, 230, 250,0.4);
     border: none;
-    top: -25px;
-    left: -25px;
+    top: -20px;
+    left: -20px;
     z-index: -2;
 }
 .empty{
-    margin: 0 25px;
+    margin-top: 70px;
     border: 2px solid #000;
-    width: 450px;
-    height: 250px;
-    line-height: 150px;
+    width: 50%;
+    height: 150px;
     position: relative;
     z-index: 1;
     color: black;
     text-align: center;
-    z-index: 1;
 }
 .text{
-    line-height: 2;
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 34px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.text h6{
+    font-size: 17px;
+    color: #000;
+    font-variant: small-caps;
+    margin-bottom: 7px;
+}
+.text p{
+    font-family: 'DynaPuff';
+    font-size: 17px;
 }
 .s2{
     width: 80%;
     margin: auto;
-    padding: 100px;
-    column-count: 2;
+    padding: 20px;
     line-height: 1.5em;
 }
 .s2 h3,.s2 h4{
@@ -107,102 +156,308 @@ div.img img{
     font-variant: small-caps;
 }
 .s3{
-    margin-bottom: 100px;
+    margin-bottom: 30px;
     width: 100%;
-    height: 700px;
 }
 .s3 img{
-    min-width: 100%;
-    max-height: 600px;
-}
-.s4 div.img{
-    margin: 0 0 0 80px;
+    max-width: 100%;
 }
 .s4 .empty{
-    margin: 25px 0;
+    margin: 70px 0;
 }
 .s5{
-    margin-top: 75px;
+    margin: 30px auto 0;
+    width: 90%;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
 }
 .f1,.f2,.f3{
-    max-width: 320px;
     text-align: center;
 }
 .c1,.c2,.c3{
-    width: 300px;
-    height: 300px;
+    margin: auto;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
     background-color: lavender;
     font-family: 'UnifrakturMaguntia';
     font-size: 34px;
-    line-height: 300px;
+    line-height: 250px;
 }
 .f1 h5,.f2 h5,.f3 h5{
     font-weight: 700;
     font-size: 25px;
     font-variant: small-caps;
-    margin: 25px auto;
 }
 footer{
-    margin-top: 100px;
-    padding: 75px;
-    height: 90vh;
+    margin-top: 30px;
+    padding: 20px;
+    height: 340px;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: lavender;
     text-align: center;
-    line-height: 2.5em;
-    font-size: x-large;
+    font-size: 16px;
 }
 .logo{
-    height: 100px;
-    width: 100px;
+    height: 30px;
+    width: 30px;
     border-radius: 50%;
     background-color: transparent;
     border: 2px solid #000;
     text-align: center;
-    line-height: 100px;
+    line-height: 30px;
     font-weight: bolder;
-    font-size: 24px;
+    font-size: 10px;
 }
 .s6 .logo{
-    margin: 0 auto 30px;
+    height: 50px;
+    width: 50px;
+    line-height: 50px;
+    margin: 0 auto 10px;
 }
 .s6 form{
-    margin: 40px auto;
+    margin: 10px auto;
 }
 .s6 form input{
-    padding: 15px;
+    padding: 12px;
     outline: none;
     border: none;
     width: 50%;
 }
 .s6 h6{
     font-family: 'Frijole';
-    font-size: larger;
+    font-size: 14px;
 }
 .s6 .icons{
     display: flex;
     justify-content: center;
-    margin: 40px auto;
+    margin: 15px auto;
 }
 .s6 .icons div a{
     display: block;
-    height: 50px;
-    width: 50px;
+    height: 30px;
+    width: 30px;
     margin-right: 10px;
     border-radius: 50%;
     border: 2px solid #000;
-    line-height: 50px;
+    line-height: 30px;
     text-align: center;
     color: #000;
 }
 .s6 input[type="submit"]{
     background-color: transparent;
     cursor: pointer;
+    font-size: 14px;
     font-variant: small-caps;
     border: 2px solid #000;
-    width: 25%;
+    width: 35%;
+    text-align: center;
+}
+@media only screen and (min-width: 600px) {
+    header{
+        height: 400px;
+    }
+    .empty{
+        height: 32vh;
+    }
+    .text h6{
+        font-size: 17px;
+        color: #000;
+        font-variant: small-caps;
+        margin-bottom: 7px;
+    }
+    .text p{
+        font-family: 'DynaPuff';
+        font-size: 17px;
+    }
+}
+@media only screen and (min-width: 768px){
+    header{
+        height: 100vh;
+        margin-bottom: 100px;
+    }
+    header .hero-text{
+        font-size: 30px;
+    }
+    header div#logo{
+        display: none;
+    }
+    nav{
+        justify-content: center;
+    }
+    nav label{
+        display: none;
+    }
+    nav div.links{
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        position: static; 
+        background-color: transparent;
+    }
+    nav #menu:checked ~ div.links a:nth-child(4){
+        display: block;
+    }
+    .s1,.s4{
+        flex-direction: row;
+        justify-content: center;
+    }
+    div.img{
+        width: 50%;
+        margin: 0px 80px 0 20px;
+    }
+    div.img img{
+        max-width: 100%;
+        max-height: 100%;
+        min-height: 100%;
+    }
+    .shadow-empty{
+        top: -15px;
+        left: -15px;
+    }
+    .empty{
+        margin: 0 25px;
+        width: 30%;
+        height: 150px;
+    }
+    .s2{
+        width: 80%;
+        margin: auto;
+        padding: 100px;
+        column-count: 2;
+        line-height: 1.5em;
+    }
+    .s2 h3,.s2 h4{
+        column-span: all;
+        text-align: center;
+        margin-bottom: 15px;
+        font-size: 25px;
+        font-variant: small-caps;
+        line-height: 1.7em;
+    }
+    .s2 button,.s5 button{
+        column-span: all;
+        display: block;
+        padding: 10px 20px;
+        margin: 30px auto;
+        background-color: transparent;
+        cursor: pointer;
+        font-variant: small-caps;
+    }
+    .s3{
+        margin-bottom: 100px;
+        width: 100%;
+        height: 300px;
+    }
+    .s3 img{
+        min-width: 100%;
+        max-height: 300px;
+    }
+    .s4 div.img{
+        margin: 0 25px;
+    }
+    .s4 .empty{
+        margin: 0px 55px 0 45px;
+    }
+    .s5{
+        margin-top: 75px;
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .f1,.f2,.f3{
+        max-width: 320px;
+    }
+    .c1,.c2,.c3{
+        width: 220px;
+        height: 220px;
+        line-height: 220px;
+    }
+    .f1 h5,.f2 h5,.f3 h5{
+        margin: 25px auto;
+    }
+    footer{
+        margin-top: 100px;
+        padding: 60px;
+        height: 90vh;
+        line-height: 2.5em;
+        font-size: x-large;
+    }
+    .logo{
+        height: 100px;
+        width: 100px;
+        line-height: 100px;
+        font-size: 24px;
+    }
+    .s6 .logo{
+        height: 75px;
+        width: 75px;
+        line-height: 75px;
+        margin: 0 auto 20px;
+    }
+    .s6 form{
+        margin: 30px auto;
+    }
+    .s6 form input{
+        padding: 15px;
+    }
+    .s6 h6{
+        font-size: larger;
+    }
+    .s6 .icons{
+        margin: 30px auto;
+    }
+    .s6 .icons div a{
+        height: 50px;
+        width: 50px;
+        line-height: 50px;
+    }
+    .s6 input[type="submit"]{
+        width: 25%;
+    }
+}
+@media only screen and (min-width: 992px){
+    .shadow-empty{
+        top: -25px;
+        left: -25px;
+    }
+    .empty{
+        width: 30%;
+        height: 220px;
+    }
+    .text{
+        font-size: 34px;
+    }
+    .s3{
+        margin-bottom: 100px;
+        width: 100%;
+        height: 600px;
+    }
+    .s3 img{
+        min-width: 100%;
+        max-height: 600px;
+    }
+    .c1,.c2,.c3{
+        width: 300px;
+        height: 300px;
+        line-height: 300px;
+    }
+    footer{
+        padding: 75px;
+    }
+    .s6 .logo{
+        height: 100px;
+        width: 100px;
+        line-height: 100px;
+        margin: 0 auto 30px;
+    }
+    .s6 form{
+        margin: 40px auto;
+    }
+    .s6 .icons{
+        margin: 40px auto;
+    }
 }
